# arugula

./: .gitignore  PROJECT_PLAN.md  README.md  buildbid_prompt.txt  main.py  memu_prompt.txt  pyproject.toml  trading_prompt.txt
artifacts/delivery/: board.json  board.md
artifacts/memu/replay/: benchmark-tasks.json
artifacts/memu/scorecards/: MU-week0.json
artifacts/trading/replay/: paper-trading-baseline.json
artifacts/trading/scorecards/: TR-week0-baseline.json
core/: evaluator.py  nats_client.py
docs/: ARCHITECTURE.md  GOVERNANCE_GUARDRAILS.md  IMPLEMENTATION_MATRIX.md  MEMU_HEALTH_SWEEP_ACTION_PLAN.md  PRIORITY_PLAN.md
projects/buildbid/: AUTORESEARCH.md  SCORECARD.md  manifest.json
projects/buildbid/experiments/: EXP-001-missing-scope.yaml
projects/fermware/: AUTORESEARCH.md  manifest.json
projects/memu/: AUTORESEARCH.md  experiments.tsv  manifest.json  queue.json
projects/rareagent/: AUTORESEARCH.md  manifest.json
projects/trading/: AUTORESEARCH.md  manifest.json
reviews/autoresearch/: memu-formation-loop.md  memu-handoff-loop.md  memu-retrieval-loop.md
schemas/: experiment.schema.json  scorecard.schema.json
scripts/: memu_autoresearch.py  run_once.py
src/arugula/: bootstrap.py  cli.py  delivery.py  evidence.py  ledger.py  manifests.py  nats.py  policy.py  projects.py  replay.py  templates.py  trading_autoresearch.py
subjects/: nats-subjects.md
templates/evidence/: evidence-bundle.json
templates/experiments/: experiment.yaml
templates/projects/: manifest.json
tests/: test_policy.py  test_trading_autoresearch.py
(+6 files in other folders)
