[project]
name = "arugula"
version = "0.1.0"
description = "Evolution control plane for self-improving AI product systems"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
arugula = "arugula.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
